--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^1.8.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
     "styled-components": "^5.0.1"
   },
