--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "framer-motion": "^1.8.4",
+    "framer-motion": "2.9.0",
     "react": "^16.12.0",
+    "react-csv-reader": "^3.1.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
-    "styled-components": "^5.0.1"
+    "react-slider": "^1.1.1",
+    "styled-components": "^5.0.1",
+    "uigradients": "^1.0.0",
+    "underscore": "^1.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
